# DjangoSocialNetworkBotTestTask

./: config.yml  config_loader.py  data_generators.py  main.py  pyproject.toml
